[gd_scene load_steps=13 format=3 uid="uid://b6wmx150no6s6"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_146p2"]
[ext_resource type="Script" path="res://scripts/option_button.gd" id="1_503kn"]
[ext_resource type="Texture2D" uid="uid://cxo0n57xh3jel" path="res://assets/door2.png" id="2_3nhdj"]
[ext_resource type="FontFile" uid="uid://c8bx2tonerfbp" path="res://assets/fonts/Oswald-VariableFont_wght.ttf" id="2_ewkws"]
[ext_resource type="Texture2D" uid="uid://cspj6mane0f26" path="res://assets/door.png" id="3_4wjkg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4uxm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s06eo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fetpx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88g5s"]

[sub_resource type="Animation" id="Animation_w3nrw"]
resource_name = "new_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2847, 544), Vector2(1803, 544)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-919, 544), Vector2(133, 544)]
}

[sub_resource type="Animation" id="Animation_inn7r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1803, 544)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(133, 544)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vrrf"]
_data = {
"RESET": SubResource("Animation_inn7r"),
"new_animation": SubResource("Animation_w3nrw")
}

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_146p2")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0)

[node name="Sprite2D2" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(1803, 544)
scale = Vector2(17.4, 17.4)
texture = ExtResource("2_3nhdj")

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(133, 544)
scale = Vector2(17.4, 17.4)
texture = ExtResource("3_4wjkg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -409.0
offset_top = -130.0
offset_right = 409.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.364706, 0.364706, 0.364706, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_g4uxm")
text = "CONTINUE"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
script = ExtResource("1_503kn")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
text = "RESOLUTION:"

[node name="Res_OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.364706, 0.364706, 0.364706, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_s06eo")
flat = true

[node name="FullScreen_CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_fetpx")
text = "FULLSCREEN"
flat = true
expand_icon = true

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.362829, 0.362829, 0.362829, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_88g5s")
text = "SAVE GAME"
flat = true

[node name="Exit_mm" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.362829, 0.362829, 0.362829, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_88g5s")
text = "EXIT TO MAIN MENU"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.362829, 0.362829, 0.362829, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_88g5s")
text = "EXIT THE GAME"
flat = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("2_ewkws")
theme_override_font_sizes/font_size = 30
text = "Versión 0.1 (alpha) - Juan Carlos Zamarreño Cruces"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_3vrrf")
}
autoplay = "new_animation"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/Res_OptionButton" to="VBoxContainer/HBoxContainer" method="_on_option_button_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/FullScreen_CheckBox" to="VBoxContainer/HBoxContainer" method="_on_full_screen_check_box_toggled"]
